@@ -46,7 +46,11 @@ import gobject
 import threading
 import socket
 
-import deluge.libtorrent as lt
+try:
+    import libtorrent as lt
+except ImportError:
+    import deluge.libtorrent as lt
+    
 import deluge.configmanager
 import deluge.common
 import deluge.component as component
