@@ -35,7 +35,10 @@
 
 import os
 
-import deluge.libtorrent as lt
+try:
+    import libtorrent as lt
+except ImportError:
+    import deluge.libtorrent as lt
 import deluge.common
 import deluge.component as component
 from deluge.configmanager import ConfigManager
