@@ -165,14 +165,19 @@ for source in _sources:
             _sources.remove(source)
             break
 
-libtorrent = Extension(
-    'libtorrent',
-    extra_compile_args = _extra_compile_args,
-    include_dirs = _include_dirs,
-    libraries = _libraries,
-    library_dirs = _library_dirs,
-    sources = _sources
-)
+_ext_modules = []
+if not os.path.exists(os.path.join(sysconfig.get_config_var("LIBDIR"), "libtorrent-rasterbar.so.1")):
+    # There isn't a system libtorrent library, so let's build the one included with deluge
+    libtorrent = Extension(
+        'libtorrent',
+        extra_compile_args = _extra_compile_args,
+        include_dirs = _include_dirs,
+        libraries = _libraries,
+        library_dirs = _library_dirs,
+        sources = _sources
+    )
+    
+    _ext_modules = [libtorrent]
 
 class build_trans(cmd.Command):
     description = 'Compile .po files into .mo files'
